# mun-course-auto-check

./: .gitignore  Dockerfile  README.md  config.dist.toml  docker-compose.yml  mun-course-auto-check.py  pyproject.toml
.github/workflows/: deploy.yml
